# universityLangGraph

./: .env.example  .gitignore  BRIEF.md  Makefile  README.md  pyproject.toml
db/: schema.sql  seed.sql
docs/: architecture.md  design_decisions.md  example_queries.md  production_checklist.md
docs/traces/: README.md
scripts/: init_db.py
src/university_qa/: cli.py  composition.py  config.py
src/university_qa/adapters/: anthropic_llm.py  fake_llm.py  langsmith_tracer.py  noop_tracer.py  openai_llm.py  sqlite_executor.py  sqlite_schema.py
src/university_qa/agent/: graph.py  nodes.py  prompts.py  router.py  validator.py
src/university_qa/domain/: state.py  types.py
src/university_qa/ports/: llm_client.py  schema_provider.py  sql_executor.py  tracer.py
tests/: conftest.py
tests/e2e/: test_real_llm.py
tests/integration/: test_graph_happy_path.py  test_graph_retry.py  test_graph_safety.py
tests/unit/: test_architecture.py  test_sqlite_executor.py  test_sqlite_schema.py  test_validator.py
