[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "university-qa"
version = "0.1.0"
description = "Natural-language QA over a university database via LangGraph + Anthropic"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "langgraph>=0.2",
    "langchain-core>=0.2",
    "langsmith>=0.1",
    "sqlglot>=23.0",
    "anthropic>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: end-to-end tests requiring a real LLM (deselected by default)",
]
addopts = "-m 'not slow'"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/university_qa/domain", "src/university_qa/ports", "src/university_qa/agent"]
